tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__SmeltingAllJoy-AAAAAAAAAAAAAAAAAAAAjw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 143,
  "prerequisites": [
    129
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This combination smelter allows you to produce fused quartz and quite clear glass of all variants.\n\nIt does §onot§r alloy you to make the EIO alloys though, you'll need a mixer and (probably) EBF for that.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lSmelting All-Joy",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    129
  ],
  "rewards": [],
  "tasks": []
}
