tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__SuperTankI-AAAAAAAAAAAAAAAAAAADsA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 944,
  "prerequisites": [
    759,
    893
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This tank works the same as the smaller GT tanks, but holds way more. Specifically, 4,000,000L. Only make this for things you need tons of, LV circuits are expensive after all.\n\nNow you can store the same amount of fluids a steel 5x5 Railcraft tank contains in a single block.\n\n[note]A lot of nice functionality has been added to Super and Quantum tanks. You can now pick them up with a wrench without voiding the fluids! Super tanks (but not Quantum) will give you heavy debuffs though, so better prepare some milk.\n\nIf you actually want to void the fluids you can crouch while using the wrench.\n\nThey now also have optional automatic fluid output, fluid locking, overflow void mode, or full void mode. And all that with a nice and simple GUI. Quite the IMPACTful change I would say.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lSuper Tank I",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    759,
    893
  ],
  "rewards": [],
  "tasks": []
}
