tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__ThereCanBeOnlyOn-AAAAAAAAAAAAAAAAAAAGaw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1643,
  "prerequisites": [
    1527
  ],
  "properties": {
    "auto_claim": false,
    "desc": "...so make them lose their heads.\n\nMake yourself a Cleaver with your tool forge and collect some wither skeleton skulls.\n\n[warn]If you have problems finding wither skeletons, once you get to HV you can put a powered skeleton spawner in the Nether.[/warn]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lThere Can Be Only One...",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1527
  ],
  "rewards": [],
  "tasks": []
}
